mesa (20.2.2-1) UNRELEASED; urgency=medium

  * New upstream release.
  * control: Enable libdrm-dev for Hurd. (Closes: #973673)
  * rules: Rework EGL_PLATFORMS to match current upstream defaults.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 09 Nov 2020 16:43:25 +0200

mesa (20.2.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 15 Oct 2020 12:38:36 +0300

mesa (20.2.0-1) experimental; urgency=medium

  * New upstream release.
  * control: Add libclang-cpp11-dev to build-depends. (Closes: #954849)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 29 Sep 2020 11:07:13 +0300

mesa (20.2.0~rc4-2) experimental; urgency=medium

  * Migrate to llvm/clang-11.
  * path_max.diff: Updated. (Closes: #969040)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Sep 2020 12:07:08 +0300

mesa (20.2.0~rc4-1) experimental; urgency=medium

  * New upstream prerelease.
  * rules: Move radv rule up to fix build on non-intel archs.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 04 Sep 2020 19:32:58 +0300

mesa (20.2.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * rules: Get rid of trailing commas in *_DRIVERS options.
  * control: Bump libglvnd build-dep.
  * Update mesa-common-dev.docs.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 14 Aug 2020 18:30:42 +0300

mesa (20.1.9-1) unstable; urgency=medium

  * New upstream release.
  * control: Add libclang-cpp11-dev to build-depends. (Closes: #954849)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 01 Oct 2020 10:12:00 +0300

mesa (20.1.8-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Sep 2020 11:23:02 +0300

mesa (20.1.7-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 04 Sep 2020 14:45:01 +0300

mesa (20.1.6-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 27 Aug 2020 21:08:41 +0300
