@@ -3,6 +3,7 @@ mesa (20.2.2-1) UNRELEASED; urgency=medium
   * New upstream release.
   * control: Enable libdrm-dev for Hurd. (Closes: #973673)
   * rules: Rework EGL_PLATFORMS to match current upstream defaults.
+  * rules: Fix warnings from deprecated options. (Closes: #973675)
 
  -- Timo Aaltonen <tjaalton@debian.org>  Mon, 09 Nov 2020 16:43:25 +0200
 
